# OtaUpdater

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  MainApp.cpp
app/config/: restore.sh  update_replace.sh
app/utility/: HttpUtility.cpp  Utility.cpp
include/base/: Base.h
include/network/: UpperTcpServer.h
include/utility/: HttpUtility.h  Utility.h
lib/: libcurl.la
lib/arm/libcurl/pkgconfig/: libcurl.pc
lib/x86_libcurl/lib/pkgconfig/: libcurl.pc
